# rusty_cmake

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.MD  main.cpp
cmake/: corrosion_cxx.cmake
src/: CMakeLists.txt  main.cpp
src/cxxbridgecopy/: CMakeLists.txt  lib.rs.cc  lib.rs.h
src/rusty_code/: Cargo.toml  build.rs
src/rusty_code/src/: lib.rs
